# prismix

./: )  .gitignore  README.md  code_edit_signature.py  code_edit_utils.py  code_editor.py  commands.sh  example.py  instruction_context_pairs.py  iterative_programmer.py  main.py  milvus_local_db.py  notes.md  plex_summary.md  pyproject.toml  pytest.ini  qdrant_retriever.py  questions.md  return self.write_file(filepath, updated_content)  run_ruff_and_fix.py  run_tests_and_fix.py  run_tests_and_fix_2.py  temp.py  test_factorial.py  test_qdrant_retriever.py
File: `prismix/core/: code_indexer.py  file_editor_module.py
codeweaver/: main.py
codeweaver/core/: iterative_programmer.py
examples/: example.py
litellm/: utils.py
litellm/llms/tokenizers/: __init__.py
old/File: `prismix/core/: code_indexer.py  file_editor_module.py
output/: add_numbers.py  calc_sum.py  factorial.py  generated_code.py
prismix/: main.py
prismix/core/: code_embedder.py  code_indexer.py  colbert_retriever.py  executor.py  file_editor_module.py  file_operations.py  generator.py  iterative_programmer.py  metrics.py  models.py  qdrant_manager.py  signatures.py  some_module.py
prismix/scripts/: generate_edit_dataset.py
samples/: basic_function.py  calculator.py  file_processor.py  user_manager.py
scripts/: create_samples.py
tests/: test_code_editor.py  test_code_indexer.py  test_code_safety.py  test_colbert_retriever.py  test_complexity.py  test_dataset_generation.py  test_edit_dataset.py  test_factorial.py  test_file_editor.py  test_file_editor_module.py  test_file_operations.py  test_iterative_programmer.py  test_main.py  test_metrics.py  test_run_tests_and_fix_2.py  test_safety.py
