[tool.poetry]
name = "prismix"
version = "0.1.0-dev"
description = "An AI-powered code synthesis tool"
authors = ["Tom Dörr <tomdoerr96@gmail.com>"]
readme = "README.md"
packages = [{include = "prismix"}]

[tool.poetry.scripts]
prismix = "prismix.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dspy-ai = "^2.5.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
