[tool.poetry]
name = "prismix"
version = "0.1.0-dev"
description = "An AI-powered code synthesis tool"
authors = ["Tom Dörr <tomdoerr96@gmail.com>"]
readme = "README.md"
packages = [{include = "prismix"}]

[tool.poetry.scripts]
prismix = "prismix.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
dspy-ai = "^2.5.0"
pytest = "^8.4.0"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.0"
openai = "^1.0.0"
isort = "^5.10.1"  # Known compatible version with Pylint
pytest-xdist = "^1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
# Explicitly remove pytest-parallel to avoid conflicts
# pytest-parallel = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
known_first_party = ["prismix"]
known_third_party = ["isort"]
virtual_env = ".venv"  # Ensure isort uses the correct virtual environment+

[tool.ruff]
fix = true
[tool.ruff.lint]
select = ["E", "W", "F", "I"]
